crates/djls-project/tests/snapshots/corpus__repos__babybuddy__core__templatetags__bootstrap.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::bool_icon":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "core.templatetags.bootstrap::filter::bool_icon": no_argument
block_specs: {}
