crates/djls-project/tests/snapshots/corpus__repos__babybuddy__core__templatetags__breadcrumb.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "core.templatetags.breadcrumb::tag::child_quick_switch":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: current_child
            requirement: required
            kind: Variable
          - name: target_url
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
