crates/djls-project/tests/snapshots/corpus__repos__babybuddy__core__templatetags__duration.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::child_age_string":
    kind: filter
    has_doc: false
  "filter::dayssince":
    kind: filter
    has_doc: false
  "filter::deltasince":
    kind: filter
    has_doc: false
  "filter::duration_string":
    kind: filter
    has_doc: false
  "filter::hours":
    kind: filter
    has_doc: false
  "filter::minutes":
    kind: filter
    has_doc: false
  "filter::seconds":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "core.templatetags.duration::filter::child_age_string": no_argument
  "core.templatetags.duration::filter::dayssince": optional_argument
  "core.templatetags.duration::filter::deltasince": optional_argument
  "core.templatetags.duration::filter::duration_string": optional_argument
  "core.templatetags.duration::filter::hours": no_argument
  "core.templatetags.duration::filter::minutes": no_argument
  "core.templatetags.duration::filter::seconds": no_argument
block_specs: {}
