crates/djls-project/tests/snapshots/corpus__repos__babybuddy__core__templatetags__misc.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::next":
    kind: filter
    has_doc: false
  "filter::prev":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "core.templatetags.misc::filter::next": required_argument
  "core.templatetags.misc::filter::prev": required_argument
block_specs: {}
