crates/djls-project/tests/snapshots/corpus__repos__babybuddy__core__templatetags__timers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "core.templatetags.timers::tag::instance_add_url":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: url_name
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "core.templatetags.timers::tag::quick_timer_nav":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "core.templatetags.timers::tag::timer_nav":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
